Modified Lab05 and added Lab06 for DSA